Adding support for adding new database nodes with zero downtime.
